hard-gists/bce94f1c37215f644e0c/run.log
=== Docker Run Log for bce94f1c37215f644e0c ===
Started at: Mi 29. Okt 19:38:42 CET 2025

[2025-10-29 19:38:42] START: Running container for bce94f1c37215f644e0c
[2025-10-29 19:38:43] SUCCESS: Container d6041262322a5470e135bd2d09efc87deef37628716beb85ef24cda4e6efb77f started for bce94f1c37215f644e0c
=== Container logs for bce94f1c37215f644e0c ===
  File "/snippet.py", line 54
    print "Register: '%s'" % reg
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for bce94f1c37215f644e0c ===
[2025-10-29 19:38:45] INFO: Container d6041262322a5470e135bd2d09efc87deef37628716beb85ef24cda4e6efb77f has stopped
